MODON MRE BPDEV/force-app/main/default/objects/Cheque_Entry__c/Cheque_Entry__c.object-meta.xml
<CustomObject>
    <label>Cheque Entry</label>
    <nameField>
        <displayFormat>CE-{000000}</displayFormat>
        <label>Cheque Entry Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cheque Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>