MODON MRE BPDEV/force-app/main/default/objects/Cheque_Entry__c/fields/Cheque_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Due_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cheque Due Date</label>
    <type>Date</type>
</CustomField>