MODON MRE BPDEV/force-app/main/default/objects/Cheque_Entry__c/fields/Cheque_Number__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cheque Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>