MODON MRE BPDEV/force-app/main/default/objects/Cheque_Entry__c/fields/Customer_Bank__c.field-meta.xml
<CustomField>
    <fullName>Customer_Bank__c</fullName>
    <label>Customer Bank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABN AMRO Bank N V</fullName>
            </value>
            <value>
                <fullName>Abu Dhabi Commercial Bank</fullName>
            </value>
            <value>
                <fullName>Abu Dhabi Islamic Bank</fullName>
            </value>
            <value>
                <fullName>ADCB</fullName>
            </value>
            <value>
                <fullName>Agricultural Bank of China</fullName>
            </value>
            <value>
                <fullName>Agricultural Bank of Egypt</fullName>
            </value>
            <value>
                <fullName>Ahli United Bank</fullName>
            </value>
            <value>
                <fullName>Ajman Bank</fullName>
            </value>
            <value>
                <fullName>Al Ahli Bank of Kuwait - Egypt</fullName>
            </value>
            <value>
                <fullName>Al Ahli Bank Of Kuwait K.S.C.</fullName>
            </value>
            <value>
                <fullName>Al Baraka Bank of Egypt S.A.E</fullName>
            </value>
            <value>
                <fullName>ALEXBANK</fullName>
            </value>
            <value>
                <fullName>Al Hilal Bank</fullName>
            </value>
            <value>
                <fullName>Al Khaliji France S.A.</fullName>
            </value>
            <value>
                <fullName>Al Maryah Community Bank</fullName>
            </value>
            <value>
                <fullName>Al Masraf</fullName>
            </value>
            <value>
                <fullName>Al Masraf Arab Bank for Investment &amp; Foreign Trade</fullName>
            </value>
            <value>
                <fullName>Arab African International Bank</fullName>
            </value>
            <value>
                <fullName>Arab Bank</fullName>
            </value>
            <value>
                <fullName>Arab Banking Corporation – Egypt S.A.E</fullName>
            </value>
            <value>
                <fullName>Arab International Bank</fullName>
            </value>
            <value>
                <fullName>Attijariwafa Bank Egypt S.A.E</fullName>
            </value>
            <value>
                <fullName>Bank Alfalah Limited</fullName>
            </value>
            <value>
                <fullName>Bank Melli Iran</fullName>
            </value>
            <value>
                <fullName>Bank NXT S.A.E</fullName>
            </value>
            <value>
                <fullName>Bank of Baroda</fullName>
            </value>
            <value>
                <fullName>Bank Of China</fullName>
            </value>
            <value>
                <fullName>Bank of Sharjah</fullName>
            </value>
            <value>
                <fullName>Bank Saderat Iran</fullName>
            </value>
            <value>
                <fullName>Banque Banorient France</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>