MODON MRE BPDEV/force-app/main/default/objects/Cheque_Entry__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Cheque Entries</relationshipLabel>
    <relationshipName>Cheque_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>