MODON MRE BPDEV/force-app/main/default/objects/Cheque_Entry__c/fields/Receipt_Created__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receipt Created?</label>
    <type>Checkbox</type>
</CustomField>