MODON MRE BPDEV/force-app/main/default/objects/Cheque_Entry__c/fields/Rejection_Comments__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rejection Comments</label>
    <type>TextArea</type>
</CustomField>