MODON MRE BPDEV/force-app/main/default/objects/Cheque_Entry__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipLabel>Cheque Entries</relationshipLabel>
    <relationshipName>Cheque_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>