MODON MRE BPDEV/force-app/main/default/objects/Cheque_Entry__c/fields/SOI_Milestone_Number__c.field-meta.xml
<CustomField>
    <fullName>SOI_Milestone_Number__c</fullName>
    <description>This field stores installment number of the Sales Order Installment.</description>
    <formula>Sales_Order_Installment__r.MilestoneNumber__c</formula>
    <label>SOI Milestone Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>